dnl Process this file with autoconf to produce a configure script.

AC_INIT(pdp11tools,1.1)
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_SRCDIR([sdfmt.c])
AM_CONFIG_HEADER([conf.h])
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_AWK
AM_PROG_CC_C_O

# Checks for header files.
AC_HEADER_STDC

# generate
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
